# app/Models/Footer.php
@@ -13,7 +13,14 @@ class Footer extends Model
         'footer_logo',
         'footer_title',
         'footer_playstore_link',
+        'footer_playstore_icon',
         'footer_appstore_link',
+        'footer_appstore_icon',
         'footer_newsletter_title',
+        'footer_address_title',
+        'footer_address',
+        'footer_phone_number',
+        'footer_email',
+        'footer_copywrite_text',
     ];
 }
